Fix issue #26 : Bootstrap Modal is not visible

--- a/docs/css/main.css
+++ b/docs/css/main.css
@@ -12983,12 +12983,10 @@ be a descendant of the grid when it is being dragged.
 }
 
 .app-content {
-  position: relative;
   min-height: calc(100vh - 50px);
   margin-top: 50px;
   padding: 30px;
   background-color: #E5E5E5;
-  z-index: 1;
   -webkit-transition: margin-left 0.3s ease;
   -o-transition: margin-left 0.3s ease;
   transition: margin-left 0.3s ease;
